--- a/BTM_Qt/res_file.qrc
+++ b/BTM_Qt/res_file.qrc
@@ -199,5 +199,8 @@
         <file>images/Omar ElTurk.png</file>
         <file>images/Pape PhilippeAmagou.png</file>
         <file>images/Charles Kahudi.png</file>
+        <file>images/bbcourt_hardwood.jpg</file>
+        <file>images/championship_celeb.jpg</file>
+        <file>images/gym_2.jpg</file>
     </qresource>
 </RCC>
