Fixed the jordan pic

--- a/BTM_Qt/res_file.qrc
+++ b/BTM_Qt/res_file.qrc
@@ -202,5 +202,6 @@
         <file>images/Xu Xiaoliang.png</file>
         <file>images/Christian Baltzer.png</file>
         <file>images/Sun Yue.png</file>
+        <file>images/Michael Jordan.jpg</file>
     </qresource>
 </RCC>
